# 3d-mapping

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  a.out  bckMakeFile  build.txt  clean.sh  cmake_install.cmake  dump  makefile  pseudo_codes.txt  some
PTAM/: ARDriver.cc  CameraCalibrator  Makefile  PTAM  README.txt  System.cc  Tracker.cc  Tracker.h  VideoSource_Linux_OpenCV.cc  camera.cfg  processData.pl  projData  settings.cfg
grabcut/: grabbck.cpp  grabcut.cpp
libraries/libviso2/: .RData  .Rhistory  CMakeLists.txt  Makefile  cmake_install.cmake  err  log  pro.pl  pro2.pl  projections  some  viso2  xyz
libraries/libviso2/src/: demo.cxx  demo_mono.cpp  filter.cpp  viso_mono.cpp  viso_mono.h
object_segmentation/: CannyDetector.cpp  a.out  build.sh  data.pcd  data.txt  farneback  farneback.cpp  segment  stereo_match  stereo_match.cpp
object_segmentation/training/11/: ACCELEROMETER.txt  GYROSCOPE.txt  LIGHT.txt  LINEAR_ACCELERATION.txt  LOCATION.txt  LOCATION_KML.kml  MAGNETIC_FIELD.txt  ORIENTATION.txt  START_LOCATION.txt  START_LOCATION_KML.kml
object_segmentation/training/12/: ACCELEROMETER.txt  (+9 more)
object_segmentation/visualise/: index.html  visualiser.js  xbps-min-0.8.js
object_track/: a.out  backup.cpp  lk_based.cpp  recall.txt  thresholdBased.cpp  track  track3
odometry/: CameraTrack.cpp  CameraTrack.h  ProjectionFromEssentialMatrix.cpp  position  position.cpp
ptamWork/ptam/: a.out  main.cpp  main.h  opengl_stereo.cpp  stdafx.h  stereo.cpp  utils.cpp  utils.h
reconstruction/: VisualHull.cpp  test.cpp
(+63 files in other folders)
